--- a/財產規劃.ipynb
+++ b/財產規劃.ipynb
@@ -28,7 +28,7 @@
     }
    ],
    "source": [
-    "# Create by Chris Tien\n",
+    "# Created by Chris Tien\n",
     "\n",
     "import pandas as pd\n",
     "%matplotlib inline\n",
